--- a/dafault-param.html
+++ b/dafault-param.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // Default Parameter
         function register(name, gender = "unknown"){
             console.log(`Nama : ${name}`);
             console.log(`Kelamin: ${gender}`)
