--- a/for.html
+++ b/for.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <script>
-
+        
+        // For Loop
         let buah = ["Semangka", "Apel", "Nanas", "Jeruk"];
 
         for(let i = 0; i < buah.length; i++){
