--- a/forin.html
+++ b/forin.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // For in
         document.writeln("<h1>Perulangan for in pada object</h1>");
 
         const person = {
