--- a/forof.html
+++ b/forof.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // For of
         const names = ["Yusuf", "Taqiyuddin", "Ucup", "Uddin"];
 
         for(const name of names){
