--- a/func-rest-param.html
+++ b/func-rest-param.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // Rest Parameter
         function sum(name, ...data){
             let total = 0;
             for(const item of data){
