--- a/function-optional-param.html
+++ b/function-optional-param.html
@@ -9,13 +9,14 @@
 <body>
     <script>
 
+        // Optional Parameter
         function sayHello(firstName, lastName){
             console.info(firstName);
             console.info(lastName);
         }
 
         sayHello("Yusuf");
-        
+
     </script>
 </body>
 </html>
