--- a/function-value.html
+++ b/function-value.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // Function Parameter
         function greet(name){
             document.writeln(`Hello ${name}`);
         }
