--- a/function.html
+++ b/function.html
@@ -9,12 +9,13 @@
 <body>
     <script>
 
+        // Function
         function greet(name){
             document.writeln(`Hello ${name}`);
         }
 
         greet("Yusuf Taqiyuddin");
-        
+
     </script>
 </body>
 </html>
