--- a/inner-function.html
+++ b/inner-function.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // Function dalam Function
         function outer(){
 
             function inner(){
@@ -20,7 +21,7 @@
 
         outer();
         inner(); // Error can not access inner function
-        
+
     </script>
 </body>
 </html>
