--- a/logic-operator-non-boolean.html
+++ b/logic-operator-non-boolean.html
@@ -9,6 +9,8 @@
 <body>
     <script>
 
+        // Operator Logika Non Boolean
+
         console.info("hello" || ''); // hello
         console.info("" || []); // []
         console.info("0" || "NOL"); // "0"
