--- a/ternary.html
+++ b/ternary.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // Ternary Option
         const nilai = 80;
         let ucapan = nilai >= 75 ? "Selamat Anda Lulus" : "Silahkan Coba Lagi";
 
