--- a/while.html
+++ b/while.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // While Loop
         /*let number = 1;
         
         while(number <= 10){
@@ -17,21 +18,21 @@
         }*/
 
         
+        // Break and Continue
+
         //break
+        let number1 = 1;
 
-        /*let number = 1;
+        while(number1 <= 100){
+            document.writeln(`perulangan ke ${number1} <br>`);
+            number1++;
 
-        while(number <= 100){
-            document.writeln(`perulangan ke ${number} <br>`);
-            number++;
-
-            if(number > 10){
+            if(number1 > 10){
                 break;
             }
-        }*/
+        }
 
         //continue
-
         let number = 1;
 
         while(number <= 10){
