--- a/anonymous-function.html
+++ b/anonymous-function.html
@@ -9,12 +9,13 @@
 <body>
     <script>
 
+        // Anonymous Function
         const say = function(nama){
             document.writeln(`Hello ${name}`);
         }
 
         say("Yusuf");
-        
+
     </script>
 </body>
 </html>
