--- a/chainingoperator.html
+++ b/chainingoperator.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // Optional Chaining
         let person = {
             address:{
                 country: "Indonesia"
