--- a/function-di-parameter.html
+++ b/function-di-parameter.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // Function Sebagai Value
         function greet(name) {
                 document.writeln(`Hello ${name}`);
             }
