--- a/returnfunction.html
+++ b/returnfunction.html
@@ -9,6 +9,7 @@
 <body>
     <script>
 
+        // Function Return Value
         function penjumlahan(num1, num2){
             return num1 + num2
         }
